for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -1313,6 +1313,47 @@ issues:
     - SpatioTemporal
     suppl: 1.7 Kb
     landing: '2019'
+  - slug: RJ-2019-035
+    title: 'BINCOR: An R package for Estimating the Correlation between Two Unevenly
+      Spaced Time Series'
+    bibtitle: |-
+      BINCOR: An R package for Estimating the Correlation between
+                Two Unevenly Spaced Time Series
+    author:
+    - Josue M. Polanco-Martinez
+    - Martin A. Medina-Elizalde
+    - Maria Fernanda Sanchez Goni
+    - Manfred            Mudelsee
+    bibauthor: |-
+      Josue M. Polanco-Martinez and Martin A. Medina-Elizalde and
+                Maria Fernanda Sanchez Goni and Manfred Mudelsee
+    abstract: '  Abstract This paper presents a computational program named BINCOR
+      (BINned CORrelation) for            estimating the correlation between two unevenly
+      spaced time series. This program is also applicable to            the situation
+      of two evenly spaced time series not on the same time grid. BINCOR is based
+      on a novel            estimation approach proposed by Mudelsee (2010) for estimating
+      the correlation between two climate            time series with different timescales.
+      The idea is that autocorrelation (e.g. an AR1 process) means            that
+      memory enables values obtained on different time points to be correlated. Binned
+      correlation            is performed by resampling the time series under study
+      into time bins on a regular grid, assigning            the mean values of the
+      variable under scrutiny within those bins. We present two examples of our            BINCOR
+      package with real data: instrumental and paleoclimatic time series. In both
+      applications            BINCOR works properly in detecting well-established
+      relationships between the climate records            compared.'
+    acknowledged: '2018-02-14'
+    online: '2019-08-18'
+    CRANpkgs:
+    - BINCOR
+    - dplR
+    - pracma
+    - TSdist
+    CTV_rev:
+    - DifferentialEquations
+    - NumericalMathematics
+    - TimeSeries
+    suppl: 1.2 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
