for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -1354,6 +1354,33 @@ issues:
     - TimeSeries
     suppl: 1.2 Kb
     landing: '2019'
+  - slug: RJ-2019-036
+    title: 'auditor: an R Package for Model-Agnostic Visual Validation and Diagnostics'
+    bibtitle: |-
+      auditor: an R Package for Model-Agnostic Visual Validation
+                and Diagnostics
+    author:
+    - Alicja Gosiewska
+    - Przemysław Biecek
+    bibauthor: Alicja Gosiewska and Przemysław Biecek
+    abstract: '  Abstract                 Machine learning models have spread to almost
+      every area of life. They are successfully applied in            biology, medicine,
+      finance, physics, and other fields. With modern software it is easy to train
+      even            a complex model that fits the training data and results in high
+      accuracy on test set. The problem arises            when models fail confronted
+      with the real-world data.                 This paper describes methodology and
+      tools for model-agnostic audit. Introduced techniques            facilitate
+      assessing and comparing the goodness of fit and performance of models. In addition,
+      they            may be used for analysis of the similarity of residuals and
+      for identification of outliers and influential            observations. The
+      examination is carried out by diagnostic scores and visual verification.                 Presented
+      methods were implemented in the auditor package for R. Due to flexible and consistent            grammar,
+      it is simple to validate models of any classes.'
+    acknowledged: '2018-12-01'
+    online: '2019-08-18'
+    CRANpkgs: auditor
+    suppl: 581 bytes
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
