--- a/_config.yml
+++ b/_config.yml
@@ -1381,6 +1381,28 @@ issues:
     CRANpkgs: auditor
     suppl: 581 bytes
     landing: '2019'
+  - slug: RJ-2019-037
+    title: Fixed Point Acceleration in R
+    bibtitle: Fixed Point Acceleration in R
+    author:
+    - Stuart Baumann
+    - Margaryta Klymak
+    bibauthor: Stuart Baumann and Margaryta Klymak
+    abstract: '  Abstract A fixed point problem is one where we seek a vector, X,
+      for a function, f, such that f(X) = X.            The solution of many such
+      problems can be accelerated by using a fixed point acceleration algorithm.            With
+      the release of the FixedPoint package there is now a number of algorithms available
+      in R that can            be used for accelerating the finding of a fixed point
+      of a function. These algorithms include Newton            acceleration, Aitken
+      acceleration and Anderson acceleration as well as epsilon extrapolation methods            and
+      minimal polynomial methods. This paper demonstrates the use of fixed point accelerators
+      in            solving numerical mathematics problems using the algorithms of
+      the FixedPoint package as well as            the squarem method of the SQUAREM
+      package.'
+    acknowledged: '2018-05-29'
+    online: '2019-08-20'
+    suppl: 3.5 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
