rjournal.github.io stuff

--- a/_config.yml
+++ b/_config.yml
@@ -1437,6 +1437,51 @@ issues:
     online: '2019-08-20'
     suppl: 4.3 Kb
     landing: '2019'
+  - slug: RJ-2019-039
+    title: 'RSSampling: A Pioneering Package for Ranked Set Sampling '
+    bibtitle: 'RSSampling: A Pioneering Package for Ranked Set Sampling'
+    author:
+    - Busra Sevinc
+    - Bekir Cetintav
+    - Melek Esemen
+    - Selma Gurler
+    bibauthor: |-
+      Busra Sevinc and Bekir Cetintav and Melek Esemen and Selma
+                Gurler
+    abstract: '  Abstract Ranked set sampling (RSS) is an advanced data collection
+      method when the exact mea           surement of an observation is difficult
+      and/or expensive used in a number of research areas, e.g.,            environment,
+      bioinformatics, ecology, etc. In this method, random sets are drawn from a population            and
+      the units in sets are ranked with a ranking mechanism which is based on a visual
+      inspection or a            concomitant variable. Because of the importance of
+      working with a good design and easy analysis,            there is a need for
+      a software tool which provides sampling designs and statistical inferences based            on
+      RSS and its modifications. This paper introduces an R package as a free and
+      easy-to-use analysis            tool for both sampling processes and statistical
+      inferences based on RSS and its modified versions.            For researchers,
+      the RSSampling package provides a sample with RSS, extreme RSS, median RSS,            percentile
+      RSS, balanced groups RSS, double versions of RSS, L-RSS, truncation-based RSS,
+      and robust            extreme RSS when the judgment rankings are both perfect
+      and imperfect. Researchers can also use            this new package to make
+      parametric inferences for the population mean and the variance where the            sample
+      is obtained via classical RSS. Moreover, this package includes applications
+      of the nonparametric            methods which are one sample sign test, Mann-Whitney-Wilcoxon
+      test, and Wilcoxon signed-rank test            procedures. The package is available
+      as RSSampling on CRAN.'
+    acknowledged: '2018-07-26'
+    online: '2019-08-20'
+    CRANpkgs:
+    - NSM3
+    - RSSampling
+    - stats
+    - LearnBayes
+    CTV_rev:
+    - Bayesian
+    - Distributions
+    - Survival
+    - TeachingStatistics
+    suppl: 1.3 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
