rjournal.github.io stuff

--- a/_config.yml
+++ b/_config.yml
@@ -1482,6 +1482,44 @@ issues:
     - TeachingStatistics
     suppl: 1.3 Kb
     landing: '2019'
+  - slug: RJ-2019-040
+    title: 'unival: An FA-based R Package For Assessing Essential Unidimensionality
+      Using External Validity Information'
+    bibtitle: |-
+      unival: An FA-based R Package For Assessing Essential
+                Unidimensionality Using External Validity Information
+    author:
+    - Pere J. Ferrando
+    - Urbano Lorenzo-Seva
+    - David Navarro-Gonzalez
+    bibauthor: |-
+      Pere J. Ferrando and Urbano Lorenzo-Seva and David Navarro-
+                Gonzalez
+    abstract: '  Abstract                The unival package is designed to help researchers
+      decide between unidimensional and correlated           factors solutions in
+      the factor analysis of psychometric measures. The novelty of the approach is
+      its use            of external information, in which multiple factor scores
+      and general factor scores are related to relevant            external variables
+      or criteria. The unival package’s implementation comes from a series of procedures            put
+      forward by Ferrando and Lorenzo-Seva (2019) and new methodological developments
+      proposed            in this article. We assess models fitted using unival by
+      means of a simulation study extending the            results obtained in the
+      original proposal. Its usefulness is also assessed through a real-world data            example.
+      Based on these results, we conclude unival is a valuable tool for use in applications
+      in which            the dimensionality of an item set is to be assessed.'
+    acknowledged: []
+    online: '2019-08-20'
+    CRANpkgs:
+    - unival
+    - stats
+    - optimbase
+    - psych
+    - mirt
+    CTV_rev:
+    - Psychometrics
+    - MissingData
+    suppl: 449 bytes
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
