old accepted not appearing now, good

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,12 @@
 markdown: kramdown
 issues:
+- issue: accepted
+  articles:
+  - slug: RJ-2019-021
+    title: 'ConvergenceClubs: A Package for Performing the Phillips and Sulas Club Convergence Clustering Procedure'
+    author: 
+    - Roberto Sichera
+    - Pietro Pizzuto
 - issue: 2009-1
   year: 2009
   volume: 1
