added a 2nd "Accepted articles" item

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,14 @@ issues:
     author: 
     - Roberto Sichera
     - Pietro Pizzuto
+  - slug: RJ-2019-003
+    title: 'dr4pl: A Stable Convergence Algorithm for the 4 Parameter Logistic Model'
+    author:
+    - Hyowon An
+    - Justin T. Landis
+    - Aubrey G. Bailey
+    - James S. Marron
+    - Dirk P. Dittmer
 - issue: 2009-1
   year: 2009
   volume: 1
