--- a/_config.yml
+++ b/_config.yml
@@ -16236,6 +16236,11 @@ issues:
     - 588
     - 590
 - issue: 2019-1
+  year: 2019
+  volume: 11
+  num: 1
+  month: June
+  bibmonth: jun
   articles:
   - slug: editorial
     cat: Editorial
@@ -16469,13 +16474,13 @@ issues:
       What's for dynr: A Package for Linear and Nonlinear Dynamic
                 Modeling in R
     author:
-    - 'Lu Ou+ '
-    - 'Michael D. Hunter+ '
+    - 'Lu Ou'
+    - 'Michael D. Hunter '
     - Sy-Miin Chow
-    bibauthor: Lu Ou+ and Michael D. Hunter+ and Sy-Miin Chow
-    abstract: '  Abstract Intensive longitudinal data in the behavioral sciences are
-      often noisy, multivariate in na           ture, and may involve multiple units
-      undergoing regime switches by showing discontinuities in           terspersed
+    bibauthor: Lu Ou and Michael D. Hunter and Sy-Miin Chow
+    abstract: 'Intensive longitudinal data in the behavioral sciences are
+      often noisy, multivariate in nature, and may involve multiple units
+      undergoing regime switches by showing discontinuities interspersed
       with continuous dynamics. Despite increasing interest in using linear and nonlinear            differential/difference
       equation models with regime switches, there has been a scarcity of software            packages
       that are fast and freely accessible. We have created an R package called dynr
