removed odd char. at -012

--- a/_config.yml
+++ b/_config.yml
@@ -16470,12 +16470,10 @@ issues:
   - slug: RJ-2019-012
     title: 'What''s for dynr: A Package for Linear and Nonlinear Dynamic Modeling
       in R'
-    bibtitle: |-
-      What's for dynr: A Package for Linear and Nonlinear Dynamic
-                Modeling in R
+    bibtitle: What's for dynr: A Package for Linear and Nonlinear Dynamic Modeling in R
     author:
-    - 'Lu Ou'
-    - 'Michael D. Hunter '
+    - Lu Ou
+    - Michael D. Hunter
     - Sy-Miin Chow
     bibauthor: Lu Ou and Michael D. Hunter and Sy-Miin Chow
     abstract: 'Intensive longitudinal data in the behavioral sciences are
