title split on 2 lines

--- a/_config.yml
+++ b/_config.yml
@@ -16468,8 +16468,7 @@ issues:
     suppl: 4.1 Kb
     landing: '2019'
   - slug: RJ-2019-012
-    title: 'What''s for dynr: A Package for Linear and Nonlinear Dynamic Modeling
-      in R'
+    title: 'What''s for dynr: A Package for Linear and Nonlinear Dynamic Modeling in R'
     bibtitle: What's for dynr: A Package for Linear and Nonlinear Dynamic Modeling in R
     author:
     - Lu Ou
