added CRAN report

--- a/_config.yml
+++ b/_config.yml
@@ -16468,8 +16468,9 @@ issues:
     suppl: 4.1 Kb
     landing: '2019'
   - slug: RJ-2019-012
-    title: 'What''s for dynr: A Package for Linear and Nonlinear Dynamic Modeling in R'
-    bibtitle: What's for dynr: A Package for Linear and Nonlinear Dynamic Modeling in R
+    title: 'Whats for dynr: A Package for Linear and Nonlinear Dynamic Modeling in R'
+    bibtitle: |- 
+       Whats for dynr: A Package for Linear and Nonlinear Dynamic Modeling in R
     author:
     - Lu Ou
     - Michael D. Hunter
@@ -17313,4 +17314,15 @@ issues:
     pages:
     - 438
     - 439
+  - slug: cran
+    author:
+    - Kurt Hornik
+    - Uwe Ligges
+    - Achim Zeileis
+    title: Changes on CRAN
+    bibtitle: Changes on CRAN
+    bibauthor: Kurt Hornik and Uwe Ligges and Achim Zeileis
+    pages:
+    - 440
+    - 443
 
