--- a/_config.yml
+++ b/_config.yml
@@ -17310,7 +17310,7 @@ issues:
     - R Core Team
     title: 'R News'
     bibtitle: 'R News'
-    bibauthor: R Core Tam
+    bibauthor: R Core Team
     pages:
     - 438
     - 439
