restored Accepted Articles

--- a/_config.yml
+++ b/_config.yml
@@ -2,19 +2,471 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
-  - slug: RJ-2019-021
-    title: 'ConvergenceClubs: A Package for Performing the Phillips and Sulas Club Convergence Clustering Procedure'
-    author: 
-    - Roberto Sichera
-    - Pietro Pizzuto
   - slug: RJ-2019-003
     title: 'dr4pl: A Stable Convergence Algorithm for the 4 Parameter Logistic Model'
+    bibtitle: |-
+      dr4pl: A Stable Convergence Algorithm for the 4 Parameter
+                Logistic Model
     author:
     - Hyowon An
     - Justin T. Landis
     - Aubrey G. Bailey
     - James S. Marron
     - Dirk P. Dittmer
+    bibauthor: |-
+      Hyowon An and Justin T. Landis and Aubrey G. Bailey and
+                James S. Marron and Dirk P. Dittmer
+    abstract: '  Abstract The 4 Parameter Logistic (4PL) model has been recognized
+      as a major tool to analyze the            relationship between doses and responses
+      in pharmacological experiments. A main strength of this            model is
+      that each parameter contributes an intuitive meaning enhancing interpretability
+      of a fitted            model. However, implementing the 4PL model using conventional
+      statistical software often encounters            numerical errors. This paper
+      highlights the issue of convergence failure and presents several causes            with
+      solutions. These causes include outliers and a non-logistic data shape, so useful
+      remedies such            as robust estimation, outlier diagnostics and constrained
+      optimization are proposed. These features            are implemented in a new
+      R package dr4pl (Dose-Response analysis using the 4 Parameter Logistic            model)
+      whose code examples are presented as a separate section. Our R package dr4pl
+      is shown to            work well for data sets where the traditional dose-response
+      modelling packages drc and nplr fail.'
+    acknowledged: '2018-04-04'
+    online: '2019-07-30'
+    CRANpkgs:
+    - dr4pl
+    - drc
+    - nplr
+    CTV_rev: ChemPhys
+    suppl: 4.1 Kb
+    landing: '2019'
+  - slug: RJ-2019-004
+    title: 'Time Series Forecasting with KNN in R: the tsfknn Package'
+    bibtitle: 'Time Series Forecasting with KNN in R: the tsfknn Package'
+    author:
+    - Francisco Martínez
+    - María P. Frías
+    - Francisco Charte
+    - Antonio J. Rivera
+    bibauthor: |-
+      Francisco Martínez and María P. Frías and Francisco Charte
+                and Antonio J. Rivera
+    abstract: '  Abstract In this paper the tsfknn package for time series forecasting
+      using k-nearest neighbor regres           sion is described. This package allows
+      users to specify a KNN model and to generate its forecasts.            The user
+      can choose among different multi-step ahead strategies and among different functions
+      to            aggregate the targets of the nearest neighbors. It is also possible
+      to assess the forecast accuracy of the            KNN model.'
+    acknowledged: '2018-05-29'
+    online: '2019-07-30'
+    CRANpkgs:
+    - forecast
+    - caret
+    - nnfor
+    - tsfknn
+    - forecastHybrid
+    - GMDH
+    - NTS
+    - tsDyn
+    - nnet
+    - neuralnet
+    CTV_rev:
+    - TimeSeries
+    - Econometrics
+    - Finance
+    - MachineLearning
+    - Environmetrics
+    - HighPerformanceComputing
+    - MissingData
+    - Multivariate
+    - SocialSciences
+    suppl: 718 bytes
+    landing: '2019'
+  - slug: RJ-2019-005
+    title: 'rollmatch: An R Package for Rolling Entry Matching'
+    bibtitle: 'rollmatch: An R Package for Rolling Entry Matching'
+    author:
+    - Kasey Jones
+    - Rob Chew
+    - Allison Witman
+    - Yiyan Liu
+    bibauthor: Kasey Jones and Rob Chew and Allison Witman and Yiyan Liu
+    abstract: '  Abstract The gold standard of experimental research is the randomized
+      control trial. However,            interventions are often implemented without
+      a randomized control group for practical or ethical            reasons. Propensity
+      score matching (PSM) is a popular method for minimizing the effects of a            randomized
+      experiment from observational data by matching members of a treatment group
+      to similar            candidates that did not receive the intervention. Traditional
+      PSM is not designed for studies that enroll            participants on a rolling
+      basis and does not provide a solution for interventions in which the baseline            and
+      intervention period are undefined in the comparison group. Rolling Entry Matching
+      (REM) is a            new matching method that addresses both issues. REM selects
+      comparison members who are similar            to intervention members with respect
+      to both static (e.g., race) and dynamic (e.g., health conditions)            characteristics.
+      This paper will discuss the key components of REM and introduce the rollmatch
+      R            package.'
+    acknowledged: '2018-05-29'
+    online: '2019-07-30'
+    CRANpkgs:
+    - rollmatch
+    - CBPS
+    - ipw
+    - MatchIt
+    - Matching
+    - optmatch
+    CTV_rev:
+    - SocialSciences
+    - HighPerformanceComputing
+    - MissingData
+    - OfficialStatistics
+    - Optimization
+    suppl: 1.1 Kb
+    landing: '2019'
+  - slug: RJ-2019-006
+    title: 'orthoDr: Semiparametric Dimension Reduction via Orthogonality Constrained
+      Optimization'
+    bibtitle: |-
+      orthoDr: Semiparametric Dimension Reduction via
+                Orthogonality Constrained Optimization
+    author:
+    - Ruoqing Zhu
+    - Jiyang Zhang
+    - Ruilin Zhao
+    - Peng Xu
+    - Wenzhuo Zhou
+    - Xin Zhang
+    bibauthor: |-
+      Ruoqing Zhu and Jiyang Zhang and Ruilin Zhao and Peng Xu and
+                Wenzhuo Zhou and Xin Zhang
+    abstract: '  Abstract orthoDr is a package in R that solves dimension reduction
+      problems using orthogonality            constrained optimization approach. The
+      package serves as a unified framework for many regression            and survival
+      analysis dimension reduction models that utilize semiparametric estimating equations.            The
+      main computational machinery of orthoDr is a first-order algorithm developed
+      by Wen and            Yin (2012) for optimization within the Stiefel manifold.
+      We implement the algorithm through Rcpp            and OpenMP for fast computation.
+      In addition, we developed a general-purpose solver for such            constrained
+      problems with user-specified objective functions, which works as a drop-in version
+      of            optim(). The package also serves as a platform for future methodology
+      developments along this line            of work.'
+    acknowledged: []
+    online: '2019-07-30'
+    CRANpkgs:
+    - orthoDr
+    - Rcpp
+    - RcppArmadillo
+    - ManifoldOpthm
+    CTV_rev:
+    - NumericalMathematics
+    - HighPerformanceComputing
+    suppl: 14.2 Kb
+    landing: '2019'
+  - slug: RJ-2019-007
+    title: 'Modeling regimes with extremes: the bayesdfa package for identifying and
+      forecasting common trends and anomalies in multivariate time-series data'
+    bibtitle: |-
+      Modeling regimes with extremes: the bayesdfa package for
+                identifying and forecasting common trends and anomalies in
+                multivariate time-series data
+    author:
+    - Eric J. Ward
+    - Sean C. Anderson
+    - Luis A. Damiano
+    - Mary E. Hunsicker
+    - Michael A. Litzow
+    bibauthor: |-
+      Eric J. Ward and Sean C. Anderson and Luis A. Damiano and
+                Mary E. Hunsicker and Michael A. Litzow
+    abstract: '  Abstract The bayesdfa package provides a flexible Bayesian modeling
+      framework for applying dy           namic factor analysis (DFA) to multivariate
+      time-series data as a dimension reduction tool. The core            estimation
+      is done with the Stan probabilistic programming language. In addition to being
+      one of the            few Bayesian implementations of DFA, novel features of
+      this model include (1) optionally modeling            latent process deviations
+      as drawn from a Student-t distribution to better model extremes, and (2)            optionally
+      including autoregressive and moving-average components in the latent trends.
+      Besides            estimation, we provide a series of plotting functions to
+      visualize trends, loadings, and model pre           dicted values. A secondary
+      analysis for some applications is to identify regimes in latent trends. We            provide
+      a flexible Bayesian implementation of a Hidden Markov Model — also written with
+      Stan — to            characterize regime shifts in latent processes. We provide
+      simulation testing and details on parameter            sensitivities in supplementary
+      information.'
+    acknowledged: '2018-10-08'
+    online: '2019-07-30'
+    CRANpkgs:
+    - dlm
+    - KFAS
+    - MARSS
+    - tsfa
+    - rstan
+    - heavy
+    - bsts
+    - stochvol
+    - loo
+    - depmixS4
+    - HMM
+    - msm
+    CTV_rev:
+    - TimeSeries
+    - Bayesian
+    - Finance
+    - Cluster
+    - Distributions
+    - Econometrics
+    - Multivariate
+    - Survival
+    landing: '2019'
+  - slug: RJ-2019-021
+    title: 'ConvergenceClubs: A Package for Performing the Phillips and Sul''s Club
+      Convergence Clustering Procedure'
+    bibtitle: |-
+      ConvergenceClubs: A Package for Performing the Phillips and
+                Sul's Club Convergence Clustering Procedure
+    author:
+    - Roberto Sichera
+    - Pietro Pizzuto
+    bibauthor: Roberto Sichera and Pietro Pizzuto
+    abstract: '  Abstract This paper introduces package ConvergenceClubs, which implements
+      functions to perform            the Phillips and Sul (2007, 2009) club convergence
+      clustering procedure in a simple and reproducible            manner. The approach
+      proposed by Phillips and Sul to analyse the convergence patterns of groups            of
+      economies is formulated as a nonlinear time varying factor model that allows
+      for different time            paths as well as individual heterogeneity. Unlike
+      other approaches in which economies are grouped a            priori, it also
+      allows the endogenous determination of convergence clubs. The algorithm, usage,
+      and            implementation details are discussed.'
+    acknowledged:
+    - '2018-12-06'
+    - '2018-12-07'
+    online: '2019-08-16'
+    CRANpkgs:
+    - ConvergenceClubs
+    - mFilter
+    CTV_rev: TimeSeries
+    suppl: 907 bytes
+    landing: '2019'
+  - slug: RJ-2019-022
+    title: 'SimCorrMix: Simulation of Correlated Data with Multiple Variable Types
+      Including Continuous and Count Mixture Distributions'
+    bibtitle: |-
+      SimCorrMix: Simulation of Correlated Data with Multiple
+                Variable Types Including Continuous and Count Mixture
+                Distributions
+    author:
+    - Allison Fialkowski
+    - Hemant Tiwari
+    bibauthor: Allison Fialkowski and Hemant Tiwari
+    abstract: '  Abstract The SimCorrMix package generates correlated continuous (normal,
+      non-normal, and mix           ture), binary, ordinal, and count (regular and
+      zero-inflated, Poisson and Negative Binomial) variables            that mimic
+      real-world data sets. Continuous variables are simulated using either Fleishman’s
+      third           order or Headrick’s fifth-order power method transformation.
+      Simulation occurs at the component            level for continuous mixture distributions,
+      and the target correlation matrix is specified in terms of            correlations
+      with components. However, the package contains functions to approximate expected            correlations
+      with continuous mixture variables. There are two simulation pathways which calculate            intermediate
+      correlations involving count variables differently, increasing accuracy under
+      a wide range            of parameters. The package also provides functions to
+      calculate cumulants of continuous mixture            distributions, check parameter
+      inputs, calculate feasible correlation boundaries, and summarize and            plot
+      simulated variables. SimCorrMix is an important addition to existing R simulation
+      packages            because it is the first to include continuous mixture and
+      zero-inflated count variables in correlated            data sets.'
+    acknowledged: '2018-04-04'
+    online: '2019-08-16'
+    CRANpkgs:
+    - AdaptGauss
+    - DPP
+    - bgmm
+    - ClusterR
+    - mclust
+    - mixture
+    - AdMit
+    - bimixt
+    - bmixture
+    - CAMAN
+    - flexmix
+    - mixdist
+    - mixtools
+    - nspmix
+    - MixtureInf
+    - Rmixmod
+    - hurdlr
+    - zic
+    - mixpack
+    - distr
+    - stats
+    - rebmix
+    - SimCorrMix
+    - SimMultiCorrData
+    - GenOrd
+    - VGAM
+    - Matrix
+    - ggplot2
+    - mvtnorm
+    CTV_rev:
+    - Cluster
+    - Distributions
+    - Multivariate
+    - Bayesian
+    - Environmetrics
+    - Econometrics
+    - Psychometrics
+    - ExtremeValue
+    - Finance
+    - Graphics
+    - MetaAnalysis
+    - NumericalMathematics
+    - Phylogenetics
+    - Robust
+    - SocialSciences
+    - Survival
+    - TeachingStatistics
+    suppl: 5.3 Kb
+    landing: '2019'
+  - slug: RJ-2019-027
+    title: 'cvcrand: A package for covariate-constrained randomization and the clustered
+      permutation test for cluster randomized trials'
+    bibtitle: |-
+      cvcrand: A package for covariate-constrained randomization
+                and the clustered permutation test for cluster randomized
+                trials
+    author:
+    - Hengshi Yu
+    - Fan Li
+    - John A. Gallis
+    - Elizabeth L. Turner
+    bibauthor: |-
+      Hengshi Yu and Fan Li and John A. Gallis and Elizabeth L.
+                Turner
+    abstract: '  Abstract The cluster randomized trial (CRT) is a randomized controlled
+      trial in which randomization            is conducted at the cluster level (e.g.
+      school or hospital) and outcomes are measured for each            individual
+      within a cluster. Often, the number of clusters available to randomize is small
+      (≤ 20), which            increases the chance of baseline covariate imbalance
+      between comparison arms. Such imbalance is            particularly problematic
+      when the covariates are predictive of the outcome because it can threaten            the
+      internal validity of the CRT. Pair-matching and stratification are two restricted
+      randomization            approaches that are frequently used to ensure balance
+      at the design stage. An alternative, less            commonly-used restricted
+      randomization approach is covariate-constrained randomization. Covariate           constrained
+      randomization quantifies baseline imbalance of cluster-level covariates using
+      a balance            metric and randomly selects a randomization scheme from
+      those with acceptable balance by the            balance metric. It is able to
+      accommodate multiple covariates, both categorical and continuous. To            facilitate
+      implementation of covariate-constrained randomization for the design of two-arm
+      parallel            CRTs, we have developed the cvcrand R package. In addition,
+      cvcrand also implements the clustered            permutation test for analyzing
+      continuous and binary outcomes collected from a CRT designed with            covariate-constrained
+      randomization. We used a real cluster randomized trial to illustrate the functions            included
+      in the package.'
+    acknowledged: '2018-05-01'
+    online: '2019-08-17'
+    CRANpkgs: cvcrand
+    suppl: 1.4 Kb
+    landing: '2019'
+  - slug: RJ-2019-032
+    title: 'roahd Package: Robust Analysis of High Dimensional Data'
+    bibtitle: 'roahd Package: Robust Analysis of High Dimensional Data'
+    author:
+    - Francesca Ieva
+    - Anna Maria Paganoni
+    - Juan Romo
+    - Nicholas Tarabelloni
+    bibauthor: |-
+      Francesca Ieva and Anna Maria Paganoni and Juan Romo and
+                Nicholas Tarabelloni
+    abstract: ' Abstract The focus of this paper is on the open-source R package roahd
+      (RObust Analysis           of High dimensional Data), see Tarabelloni et al.
+      (2017). roahd has been developed to gather           recently proposed statistical
+      methods that deal with the robust inferential analysis of univariate           and
+      multivariate functional data. In particular, efficient methods for outlier detection
+      and related           graphical tools, methods to represent and simulate functional
+      data, as well as inferential tools for           testing differences and dependency
+      among families of curves will be discussed, and the associated           functions
+      of the package will be described in details.'
+    acknowledged: []
+    online: '2019-08-17'
+    CRANpkgs: R
+    suppl: 1.3 Kb
+    landing: '2019'
+  - slug: RJ-2019-033
+    title: The Landscape of R Packages for Automated Exploratory Data Analysis
+    bibtitle: |-
+      The Landscape of R Packages for Automated Exploratory Data
+                Analysis
+    author:
+    - Mateusz Staniak
+    - Przemysław Biecek
+    bibauthor: Mateusz Staniak and Przemysław Biecek
+    abstract: '  Abstract The increasing availability of large but noisy data sets
+      with a large number of heterogeneous            variables leads to the increasing
+      interest in the automation of common tasks for data analysis. The            most
+      time-consuming part of this process is the Exploratory Data Analysis, crucial
+      for better domain            understanding, data cleaning, data validation,
+      and feature engineering.                  There is a growing number of libraries
+      that attempt to automate some of the typical Exploratory            Data Analysis
+      tasks to make the search for new insights easier and faster. In this paper,
+      we present a            systematic review of existing tools for Automated Exploratory
+      Data Analysis (autoEDA). We explore            the features of fifteen popular
+      R packages to identify the parts of analysis that can be effectively            automated
+      with the current tools and to point out new directions for further autoEDA development.'
+    acknowledged: []
+    online: '2019-08-17'
+    CRANpkgs:
+    - cranlogs
+    - radiant
+    - visdat
+    - archivist
+    - xtable
+    - arsenal
+    - DataExplorer
+    - dataMaid
+    - dlookr
+    - ExPanDaR
+    - explore
+    - shiny
+    - exploreR
+    - funModeling
+    - inspectdf
+    - RtutoR
+    - SmartEDA
+    - data.table
+    - summarytools
+    - knitr
+    - ggplot2
+    - xray
+    - tableone
+    - describer
+    - skimr
+    - prettyR
+    - Hmisc
+    - ggfortify
+    - autoplotly
+    - gpairs
+    - GGally
+    - survminer
+    - cr17
+    - DALEX
+    - iml
+    CTV_rev:
+    - ReproducibleResearch
+    - MissingData
+    - TeachingStatistics
+    - WebTechnologies
+    - Bayesian
+    - ClinicalTrials
+    - Econometrics
+    - Finance
+    - Graphics
+    - HighPerformanceComputing
+    - Multivariate
+    - OfficialStatistics
+    - Phylogenetics
+    - SocialSciences
+    - Survival
+    suppl: 1.6 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
