--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,33 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
+  - slug: RJ-2019-036
+    title: 'auditor: an R Package for Model-Agnostic Visual Validation and Diagnostics'
+    bibtitle: |-
+      auditor: an R Package for Model-Agnostic Visual Validation
+                and Diagnostics
+    author:
+    - Alicja Gosiewska
+    - Przemysław Biecek
+    bibauthor: Alicja Gosiewska and Przemysław Biecek
+    abstract: '  Abstract                 Machine learning models have spread to almost
+      every area of life. They are successfully applied in            biology, medicine,
+      finance, physics, and other fields. With modern software it is easy to train
+      even            a complex model that fits the training data and results in high
+      accuracy on test set. The problem arises            when models fail confronted
+      with the real-world data.                 This paper describes methodology and
+      tools for model-agnostic audit. Introduced techniques            facilitate
+      assessing and comparing the goodness of fit and performance of models. In addition,
+      they            may be used for analysis of the similarity of residuals and
+      for identification of outliers and influential            observations. The
+      examination is carried out by diagnostic scores and visual verification.                 Presented
+      methods were implemented in the auditor package for R. Due to flexible and consistent            grammar,
+      it is simple to validate models of any classes.'
+    acknowledged: '2018-12-01'
+    online: '2019-08-18'
+    CRANpkgs: auditor
+    suppl: 581 bytes
+    landing: '2019'
   - slug: RJ-2019-003
     title: 'dr4pl: A Stable Convergence Algorithm for the 4 Parameter Logistic Model'
     bibtitle: |-
