rjournal.github.io stuff

--- a/_config.yml
+++ b/_config.yml
@@ -239,6 +239,34 @@ issues:
     pages:
     - 60
     - 65
+  - slug: RJ-2019-042
+    title: 'coxed: An R Package for Computing Duration-Based Quantities from the Cox
+      Proportional Hazards Model'
+    bibtitle: |-
+      coxed: An R Package for Computing Duration-Based Quantities
+                from the Cox Proportional Hazards Model
+    author:
+    - Jonathan Kropko
+    - Jeffrey J. Harden
+    bibauthor: Jonathan Kropko and Jeffrey J. Harden
+    abstract: '  Abstract The Cox proportional hazards model is one of the most frequently
+      used estimators in duration            (survival) analysis. Because it is estimated
+      using only the observed durations’ rank ordering, typical            quantities
+      of interest used to communicate results of the Cox model come from the hazard
+      function            (e.g., hazard ratios or percentage changes in the hazard
+      rate). These quantities are substantively vague            and difficult for
+      many audiences of research to understand. We introduce a suite of methods in
+      the R            package coxed to address these problems. The package allows
+      researchers to calculate duration-based            quantities from Cox model
+      results, such as the expected duration (or survival time) given covariate            values
+      and marginal changes in duration for a specified change in a covariate. These
+      duration-based            quantities often match better with researchers’ substantive
+      interests and are easily understood by most            readers. We describe
+      the methods and illustrate use of the package.'
+    acknowledged: '2018-10-08'
+    online: '2019-12-26'
+    suppl: 1.4 Kb
+    landing: '2019'
   notes:
   - title: 'Forthcoming Events: Conference on Quantitative Social Science Research
       Using R'
@@ -16471,26 +16499,27 @@ issues:
     - 112
     - 136
   - slug: RJ-2019-012
-    title: 'Whats for dynr: A Package for Linear and Nonlinear Dynamic Modeling in R'
-    bibtitle: |- 
-       Whats for dynr: A Package for Linear and Nonlinear Dynamic Modeling in R
+    title: 'Whats for dynr: A Package for Linear and Nonlinear Dynamic Modeling in
+      R'
+    bibtitle: 'Whats for dynr: A Package for Linear and Nonlinear Dynamic Modeling
+      in R'
     author:
     - Lu Ou
     - Michael D. Hunter
     - Sy-Miin Chow
     bibauthor: Lu Ou and Michael D. Hunter and Sy-Miin Chow
-    abstract: 'Intensive longitudinal data in the behavioral sciences are
-      often noisy, multivariate in nature, and may involve multiple units
-      undergoing regime switches by showing discontinuities interspersed
-      with continuous dynamics. Despite increasing interest in using linear and nonlinear            differential/difference
-      equation models with regime switches, there has been a scarcity of software            packages
+    abstract: Intensive longitudinal data in the behavioral sciences are often noisy,
+      multivariate in nature, and may involve multiple units undergoing regime switches
+      by showing discontinuities interspersed with continuous dynamics. Despite increasing
+      interest in using linear and nonlinear            differential/difference equation
+      models with regime switches, there has been a scarcity of software            packages
       that are fast and freely accessible. We have created an R package called dynr
       that can handle            a broad class of linear and nonlinear discreteand
       continuous-time models, with regime-switching            properties and linear
       Gaussian measurement functions, in C, while maintaining simple and easy-to           learn
       model specification functions in R. We present the mathematical and computational
       bases used            by the dynr R package, and present two illustrative examples
-      to demonstrate the unique features of            dynr.'
+      to demonstrate the unique features of            dynr.
     acknowledged: '2018-02-02'
     online: '2019-08-15'
     CRANpkgs:
@@ -17299,13 +17328,11 @@ issues:
     - 436
   - heading: News and Notes
   - slug: foundation
-    author:
-    - Torsten Hothorn
-    title: 'R Foundation News'
-    bibtitle: 'R Foundation News'
+    author: Torsten Hothorn
+    title: R Foundation News
+    bibtitle: R Foundation News
     bibauthor: Torsten Hothorn
-    page:
-    - 437
+    page: 437
   - slug: cran
     author:
     - Kurt Hornik
@@ -17318,10 +17345,9 @@ issues:
     - 438
     - 441
   - slug: ch
-    author:
-    - R Core Team
-    title: 'R News'
-    bibtitle: 'R News'
+    author: R Core Team
+    title: R News
+    bibtitle: R News
     bibauthor: R Core Team
     pages:
     - 442
