--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,35 @@
 markdown: kramdown
 issues:
+- issue: accepted
+  articles:
+  - slug: RJ-2019-042
+    title: 'coxed: An R Package for Computing Duration-Based Quantities from the Cox
+      Proportional Hazards Model'
+    bibtitle: |-
+      coxed: An R Package for Computing Duration-Based Quantities
+                from the Cox Proportional Hazards Model
+    author:
+    - Jonathan Kropko
+    - Jeffrey J. Harden
+    bibauthor: Jonathan Kropko and Jeffrey J. Harden
+    abstract: '  Abstract The Cox proportional hazards model is one of the most frequently
+      used estimators in duration            (survival) analysis. Because it is estimated
+      using only the observed durations’ rank ordering, typical            quantities
+      of interest used to communicate results of the Cox model come from the hazard
+      function            (e.g., hazard ratios or percentage changes in the hazard
+      rate). These quantities are substantively vague            and difficult for
+      many audiences of research to understand. We introduce a suite of methods in
+      the R            package coxed to address these problems. The package allows
+      researchers to calculate duration-based            quantities from Cox model
+      results, such as the expected duration (or survival time) given covariate            values
+      and marginal changes in duration for a specified change in a covariate. These
+      duration-based            quantities often match better with researchers’ substantive
+      interests and are easily understood by most            readers. We describe
+      the methods and illustrate use of the package.'
+    acknowledged: '2018-10-08'
+    online: '2019-12-26'
+    suppl: 1.4 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -239,34 +269,6 @@ issues:
     pages:
     - 60
     - 65
-  - slug: RJ-2019-042
-    title: 'coxed: An R Package for Computing Duration-Based Quantities from the Cox
-      Proportional Hazards Model'
-    bibtitle: |-
-      coxed: An R Package for Computing Duration-Based Quantities
-                from the Cox Proportional Hazards Model
-    author:
-    - Jonathan Kropko
-    - Jeffrey J. Harden
-    bibauthor: Jonathan Kropko and Jeffrey J. Harden
-    abstract: '  Abstract The Cox proportional hazards model is one of the most frequently
-      used estimators in duration            (survival) analysis. Because it is estimated
-      using only the observed durations’ rank ordering, typical            quantities
-      of interest used to communicate results of the Cox model come from the hazard
-      function            (e.g., hazard ratios or percentage changes in the hazard
-      rate). These quantities are substantively vague            and difficult for
-      many audiences of research to understand. We introduce a suite of methods in
-      the R            package coxed to address these problems. The package allows
-      researchers to calculate duration-based            quantities from Cox model
-      results, such as the expected duration (or survival time) given covariate            values
-      and marginal changes in duration for a specified change in a covariate. These
-      duration-based            quantities often match better with researchers’ substantive
-      interests and are easily understood by most            readers. We describe
-      the methods and illustrate use of the package.'
-    acknowledged: '2018-10-08'
-    online: '2019-12-26'
-    suppl: 1.4 Kb
-    landing: '2019'
   notes:
   - title: 'Forthcoming Events: Conference on Quantitative Social Science Research
       Using R'
