rjournal.github.io stuff

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,50 @@ issues:
     online: '2019-12-26'
     suppl: 1.4 Kb
     landing: '2019'
+  - slug: RJ-2019-043
+    title: 'The IDSpatialStats R Package: Quantifying Spatial Dependence of Infectious
+      Disease Spread'
+    bibtitle: |-
+      The IDSpatialStats R Package: Quantifying Spatial Dependence
+                of Infectious Disease Spread
+    author:
+    - John R. Giles
+    - Henrik Salje
+    - Justin Lessler
+    bibauthor: John R. Giles and Henrik Salje and Justin Lessler
+    abstract: '  Abstract Spatial statistics for infectious diseases are important
+      because the spatial and temporal            scale over which transmission operates
+      determine the dynamics of disease spread. Many methods            for quantifying
+      the distribution and clustering of spatial point patterns have been developed
+      (e.g. K           function and pair correlation function) and are routinely
+      applied to infectious disease case occurrence            data. However, these
+      methods do not explicitly account for overlapping chains of transmission and            require
+      knowledge of the underlying population distribution, which can be limiting when
+      analyzing            epidemic case occurrence data. Therefore, we developed
+      two novel spatial statistics that account for            these effects to estimate:
+      1) the mean of the spatial transmission kernel, and 2) the τ-statistic, a measure            of
+      global clustering based on pathogen subtype. We briefly introduce these statistics
+      and show how to            implement them using the IDSpatialStats R package.'
+    acknowledged: '2019-01-02'
+    online: '2019-12-26'
+    CRANpkgs:
+    - lgcp
+    - ppmlasso
+    - spdep
+    - ads
+    - spatstat
+    - splancs
+    - IDSpatialStats
+    - DCluster
+    - SGCS
+    - sparr
+    CTVs: Spatial
+    CTV_rev:
+    - Spatial
+    - SpatioTemporal
+    - Survival
+    suppl: 3 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
